bug fixes for calcular key gaps, click animation and AC/C button

--- a/src/components/apps/Calculator/Calculator.module.scss
+++ b/src/components/apps/Calculator/Calculator.module.scss
@@ -21,9 +21,7 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(5, 1fr);
-  gap: 0.9px;
-
-  margin: 1.5px;
+  gap: 1px;
 
   & > button {
     font-size: 1.618rem;
@@ -35,14 +33,26 @@
 
 .topRowButton {
   background-color: hsla(0, 0%, 35%, 0.6);
+
+  &:active {
+    background-color: hsla(0, 0%, 54%, 0.6);
+  }
 }
 
 .numberButton {
-  background-color: hsla(0, 0%, 45%, 0.6);
+  background-color: hsla(0, 0%, 54%, 0.6);
+
+  &:active {
+    background-color: hsla(0, 0%, 90%, 0.6);
+  }
 }
 
 .operationButton {
-  background-color: hsla(33, 87%, 59%, 1);
+  background-color: hsla(32, 87%, 56%, 1);
+
+  &:active {
+    background-color: hsla(32, 68%, 47%, 1);
+  }
 }
 
 .curvedBottomLeftButton {
@@ -54,12 +64,11 @@
 }
 
 .showArea {
+  min-height: 4rem;
   font-size: 3rem;
   color: white;
   text-align: end;
   font-weight: 200;
-
   overflow: auto;
-
   padding: 0.5rem 1rem;
 }
